# rust-lto-bug

./: Cargo.toml
helper/src/: lib.rs
src/: main.rs
