[package]
name = "rust-lto-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helper = {path = "helper"}

[workspace]
members = [
    "helper"
]

[profile.release]
lto = true

[profile.dev]
lto = true